changed infrastructure implementation

--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -47,12 +47,17 @@
     <Compile Include="Api\IPascalParser.cs" />
     <Compile Include="Api\IPascalTokenizer.cs" />
     <Compile Include="Api\ISyntaxPart.cs" />
-    <Compile Include="Api\PascalCompiler.cs" />
     <Compile Include="Api\PascalFormatter.cs" />
     <Compile Include="Api\PascalParser.cs" />
     <Compile Include="Api\PascalToken.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Messages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Messages.resx</DependentUpon>
+    </Compile>
     <Compile Include="Parser\ParserBase.cs" />
+    <Compile Include="Parser\ParserServices.cs" />
     <Compile Include="Parser\RuleAttribute.cs" />
     <Compile Include="Parser\StandardParser.cs" />
     <Compile Include="Internal\Parser\Syntax\AbstractDirective.cs" />
@@ -238,6 +243,12 @@
       <Project>{677a19c0-b2d4-4153-8dc9-0713c7193ece}</Project>
       <Name>PasPasPas.Options</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Messages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Messages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
