--- a/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
+++ b/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
@@ -55,19 +55,18 @@
     <Compile Include="Input\ResolvedFile.cs" />
     <Compile Include="Input\StackedFileReader.cs" />
     <Compile Include="Input\StringInput.cs" />
+    <Compile Include="Log\ILogManager.cs" />
+    <Compile Include="Log\ILogMessage.cs" />
     <Compile Include="Log\ILogService.cs" />
+    <Compile Include="Log\ILogSource.cs" />
+    <Compile Include="Log\ILogTarget.cs" />
+    <Compile Include="Log\LogManager.cs" />
     <Compile Include="Log\LogMessage.cs" />
     <Compile Include="Log\LogService.cs" />
-    <Compile Include="Log\MessageData.cs" />
-    <Compile Include="Log\MessageGenerator.cs" />
-    <Compile Include="Log\ObjectWithLog.cs" />
+    <Compile Include="Log\LogSource.cs" />
+    <Compile Include="Log\LogTarget.cs" />
+    <Compile Include="Log\MessageSeverity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\IObjectBase.cs" />
-    <Compile Include="Service\IService.cs" />
-    <Compile Include="Service\IServiceResolutionPolicy.cs" />
-    <Compile Include="Service\ServiceBase.cs" />
-    <Compile Include="Service\ServiceProvider.cs" />
-    <Compile Include="Service\StandardServiceResolutionPolicy.cs" />
     <Compile Include="Service\StandardServices.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
