--- a/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
+++ b/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
@@ -67,8 +67,8 @@
     <Compile Include="Log\LogTarget.cs" />
     <Compile Include="Log\MessageSeverity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service\StandardServices.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
