--- a/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
+++ b/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
@@ -46,8 +46,10 @@
     <Compile Include="Configuration\ISettingsService.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Input\FileAccessBase.cs" />
+    <Compile Include="Input\FileReference.cs" />
     <Compile Include="Input\IFile.cs" />
     <Compile Include="Input\IFileAccess.cs" />
+    <Compile Include="Input\IFileReference.cs" />
     <Compile Include="Input\IParserInput.cs" />
     <Compile Include="Configuration\IConfigurationSettings.cs" />
     <Compile Include="Configuration\TypedConfigurationSettings.cs" />
