--- a/PasPasPas.Parsing/project.json
+++ b/PasPasPas.Parsing/project.json
@@ -1,7 +1,7 @@
 ﻿{
   "supports": {
     "net46.app": {},
-    "dnxcore50.app": {}
+    "uwp.10.0.app": {}
   },
   "dependencies": {
     "Microsoft.AnalyzerPowerPack": "1.1.0",
@@ -13,7 +13,7 @@
   },
   "frameworks": {
     "dotnet": {
-      "imports": "portable-net452"
+      "imports": "portable-net452+win81"
     }
   }
 }
