--- a/PasPasPasTests/PasPasPasTests.csproj
+++ b/PasPasPasTests/PasPasPasTests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="StackedReaderTest.cs" />
     <Compile Include="Parser\CompilerDirectiveTest.cs" />
     <Compile Include="Tokenizer\LineCounterTest.cs" />
+    <Compile Include="Tokenizer\TokenizerBaseTest.cs" />
     <Compile Include="Tokenizer\TokenizerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
