--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -224,10 +224,10 @@
     <Compile Include="Tokenizer\LineCounter.cs" />
     <Compile Include="Tokenizer\LineCounters.cs" />
     <Compile Include="Tokenizer\PascalTokenizerWithLookahead.cs" />
-    <Compile Include="Tokenizer\PreprocessorPunctuators.cs" />
+    <Compile Include="Tokenizer\CompilerDirectivePatterns.cs" />
     <Compile Include="Tokenizer\InputPattern.cs" />
     <Compile Include="Tokenizer\InputPatterns.cs" />
-    <Compile Include="Tokenizer\StandardPunctuators.cs" />
+    <Compile Include="Tokenizer\StandardPatterns.cs" />
     <Compile Include="Tokenizer\StandardTokenizer.cs" />
     <Compile Include="Tokenizer\PatternContinuation.cs" />
     <Compile Include="Tokenizer\TokenizerBase.cs" />
