--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -50,7 +50,9 @@
     <Compile Include="SyntaxTree\CompilerDirectives\AppTypeParameter.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\AssertSwitch.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\BooleanEvaluationSwitch.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\DebugInfoSwitch.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\CodeAlignParameter.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\DefineSymbol.cs" />
     <Compile Include="SyntaxTree\Terminal.cs" />
     <Compile Include="SyntaxTree\InvalidToken.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\AlignSwitch.cs" />
