--- a/PasPasPasTests/packages.config
+++ b/PasPasPasTests/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="System.IO" version="4.0.0" targetFramework="net461" />
-  <package id="System.IO.FileSystem" version="4.0.0" targetFramework="net461" />
-  <package id="System.IO.FileSystem.Primitives" version="4.0.0" targetFramework="net461" />
-  <package id="System.Runtime" version="4.0.20" targetFramework="net461" />
-  <package id="System.Runtime.Handles" version="4.0.0" targetFramework="net461" />
-  <package id="System.Text.Encoding" version="4.0.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks" version="4.0.0" targetFramework="net461" />
+  <package id="xunit" version="2.1.0" targetFramework="net461" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net461" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net461" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net461" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net461" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net461" />
 </packages>
