--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -56,9 +56,13 @@
     <Compile Include="SyntaxTree\CompilerDirectives\DesignOnly.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\Else.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\EndIf.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\ExcessPrecision.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ExtendedCompatibility.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\Extension.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\ExternalSymbolDeclaration.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ExtSyntax.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\HighCharUnicodeSwitch.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\Hints.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\IfDef.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ObjectExport.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ParseDenyPackageUnit.cs" />
