--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -63,7 +63,12 @@
     <Compile Include="SyntaxTree\CompilerDirectives\ExtSyntax.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\HighCharUnicodeSwitch.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\Hints.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\HppEmit.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\IfDef.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\ImageBase.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\ImplicitBuild.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\IoChecks.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\LocalSymbols.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ObjectExport.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ParseDenyPackageUnit.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\UnDefineSymbol.cs" />
