--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -75,9 +75,16 @@
     <Compile Include="SyntaxTree\CompilerDirectives\Optimization.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\Overflow.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ParseDenyPackageUnit.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\RangeChecks.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\SafeDivide.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\StackFrames.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\UnDefineSymbol.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\DefineSymbol.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\Warnings.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\WarnSwitch.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\WeakLinkRtti.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\WritableConsts.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\ZeroBasedStrings.cs" />
     <Compile Include="SyntaxTree\Terminal.cs" />
     <Compile Include="SyntaxTree\InvalidToken.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\AlignSwitch.cs" />
