--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -69,8 +69,10 @@
     <Compile Include="SyntaxTree\CompilerDirectives\ImplicitBuild.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\IoChecks.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\LegacyIfEnd.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\LibInfo.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\LocalSymbols.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\LongStrings.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\MethodInfo.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\MinEnumSize.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\NoDefine.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\NoInclude.cs" />
