--- a/PasPasPas.Parsing/PasPasPas.Parsing.csproj
+++ b/PasPasPas.Parsing/PasPasPas.Parsing.csproj
@@ -56,6 +56,7 @@
     <Compile Include="SyntaxTree\CompilerDirectives\DesignOnly.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\Else.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\EndIf.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\EndRegion.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ExcessPrecision.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ExtendedCompatibility.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\Extension.cs" />
@@ -83,10 +84,12 @@
     <Compile Include="SyntaxTree\CompilerDirectives\Optimization.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\Overflow.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ParseDenyPackageUnit.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\ParsedVersion.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\PointerMath.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\PublishedRtti.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\RangeChecks.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\RealCompatibilty.cs" />
+    <Compile Include="SyntaxTree\CompilerDirectives\Region.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\RunOnly.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\SafeDivide.cs" />
     <Compile Include="SyntaxTree\CompilerDirectives\ScopedEnums.cs" />
